# snapper-snapraid

./: .gitignore  flake.nix  pyproject.toml  requirements.txt
snapper_snapraid/: snapper.py  utils.py
snapper_snapraid/reports/: discord_report.py  email_report.py
